2013-05-17  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-done-separator): Use window-width for length, in
	anticipation of bug#2749 being fixed.

2013-05-17  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-category-completions): Restore point after
	ensuring category is properly displayed.

2013-05-16  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-filtered-items-mode-map): Update some bindings.
	(todos-show): Make it work the same in todos-archive-mode and
	todos-filtered-items-mode as in todos-mode.
	(todos-quit): When called in todos-archive-mode, switch to
	corresponding category in todo file.  When called in todos-mode,
	avoid going right back to archive.

2013-05-16  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Improve toggling of item numbering and headers.
	(todos-prefix-overlays): Don't reset item numbering for
	done items unless in todos-mode.
	(todos-archive-mode-map): Add bindings for todos-toggle-item-header.
	(todos-toggle-prefix-numbers): Reimplement without using
	todos-reset-prefix and make it work in Todos Archive mode and
	Todos Filtered Items mode.
	(todos-toggle-item-header): Make it work in Todos Archive mode and
	Todos Filtered Items mode.

2013-05-15  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Use tab instead of spaces to indent.
	(todos-indent-to-here): Change default value.
	(todos-modes-set-1): Make tab-width a local variable and set it to
	todos-indent-to-here.
	(todos-insert-item-1, todos-edit-item): Use tab not spaces to indent.
	(todos-edit-quit): Use tab not spaces to indent and fix omission of item.

2013-05-15  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el (todos-jump-to-category): Fix wrong variable left over
	from previous change.

2013-05-14  Stephen Berman  <stephen.berman@gmx.net>

	* todos.el: Improve handling of jumping to a category, in
	particular that of an archive.
	(todos-category-completions): Add optional parameter to restrict